@@ -1,3 +1,9 @@
+2005-10-28  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart/parser.py:  Add --resolvedeps and --includedeps as
+	deprecated options to %packages.  Pass line number to handlePackageHdr
+	and handleScriptHdr.
+
 2005-10-24  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart.spec:  Bump version.
